# arkana

./: CONTRIBUTING.md  Cargo.toml  PRINCIPLES.md  README.md  ROADMAP.md
.github/scripts/: generate-release-notes.mjs
.github/workflows/: build_full.yml  pull_request.yml  release.yml
src/: arkana.rs  cli.rs  crypto.rs  envelope.rs  format.rs  lib.rs  main.rs  password.rs
src/envelope/: binary.rs  mod.rs  qr.rs  text.rs  yaml.rs
tests/: cli.rs  convert.rs  decrypt.rs  encrypt.rs  roundtrip.rs  snapshot.rs
tests/fixtures/default/: encrypted_container.yml  envelope.tar  envelope.yml  envelope_mixed.tar
tests/fixtures/default_kdf_argon2_algorithm_argon2d/: encrypted_container.yml  envelope.yml
tests/fixtures/default_kdf_argon2_algorithm_argon2i/: encrypted_container.yml  envelope.yml
tests/fixtures/default_kdf_argon2_iterations_1/: encrypted_container.yml  envelope.yml
tests/fixtures/default_kdf_argon2_memory_65536/: encrypted_container.yml  envelope.yml
tests/fixtures/default_kdf_argon2_parallelism_1/: encrypted_container.yml  envelope.yml
tests/fixtures/default_kdf_argon2_version_16/: encrypted_container.yml  envelope.yml
tests/fixtures/fastest/: encrypted_container.yml  envelope.yml
tests/fixtures/fastest_base16/: envelope.yml
tests/fixtures/fastest_base16_lowercase/: envelope.yml
tests/fixtures/fastest_base32/: envelope.yml
tests/fixtures/invalid/: envelope_missing_fragment.tar  non_image.tar
tests/fixtures/long_text/: encrypted_container.yml  (+2 more)
tests/support/: fixtures.rs  macros.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+1 files in other folders)
