[package]
name = "arcana"
version = "0.0.0"
edition = "2024"

[features]
deterministic = []

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bstr = "1.12.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
hex = "0.4.3"
path-absolutize = "3.1.1"
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
zeroize = "1.8.2"

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
tempfile = "3.26.0"
